exports[`test can override header with prop 1`] = `
<div>
<div className="soft-double-ends soft-sides background--primary">
<h1>
override
</h1>
</div>
<Toggle items={{...}} toggle={[Function]} state={1} />
<Form id="accounts" fieldsetTheme="flush soft-top" classes={{...}} submit={[Function]}>
<div>
<Input name="email" type="email" placeholder="user@email.com" label="Email" errorText="Please enter a valid email" validation={[Function]} defaultValue={[undefined]} />
</div>
<div>
<Input name="password" placeholder="password" label="Password" type="password" errorText="Password may not be empty" validation={[Function]} format={[Function]} />
<div>
<Input name="firstName" label="First Name" errorText="Please enter your first name" validation={[Function]} defaultValue={[undefined]} />
<Input name="lastName" label="Last Name" errorText="Please enter your last name" validation={[Function]} defaultValue={[undefined]} />
</div>
<Checkbox name="terms" defaultValue={true} clicked={[Function]}>
By signing up you agree to our 
<a href="//newspring.cc/terms" target="_blank" rel="noopener noreferrer">
terms of use
</a>
</Checkbox>
<button className="push-double-bottom btn" type="submit">
Enter
</button>
</div>
</Form>
</div>
`;

exports[`test header renders default header 1`] = `
<div
  className="text-center">
  <h3
    className="uppercase text-light-primary flush-bottom push-half-bottom"
    style={
      Object {
        "fontWeight": "900",
      }
    }>
    Welcome To NewSpring
  </h3>
  <p
    className="flush-bottom">
    <em
      className="text-light-primary small">
      Sign In or Create your NewSpring Account
    </em>
  </p>
</div>
`;

exports[`test renders account version 1`] = `
<div>
<div className="soft-double-ends soft-sides background--primary">
<div className="text-center">
<h3 className="uppercase text-light-primary flush-bottom push-half-bottom" style={{...}}>
Welcome To NewSpring
</h3>
<p className="flush-bottom">
<em className="text-light-primary small">
Sign In or Create your NewSpring Account
</em>
</p>
</div>
</div>
<Toggle items={{...}} toggle={[Function]} state={0} />
<Form id="accounts" fieldsetTheme="flush soft-top" classes={{...}} submit={[Function]}>
<div>
<Input name="email" type="email" placeholder="user@email.com" label="Email" errorText="Please enter a valid email" validation={[Function]} defaultValue={[undefined]} />
</div>
<div>
<Input name="password" placeholder="password" label="Password" type="password" errorText="Password may not be empty" validation={[Function]} format={[Function]} />
<div className="push-bottom">
<h7>
<small>
<a href="/profile/forgot-password" className="text-primary" onClick={[Function]}>
Forgot Password?
</a>
</small>
</h7>
</div>
<button className="push-double-bottom btn" type="submit">
Enter
</button>
</div>
</Form>
</div>
`;

exports[`test renders alternate account version 1`] = `
<div>
<div className="soft-double-ends soft-sides background--primary">
<div className="text-center">
<h3 className="uppercase text-light-primary flush-bottom push-half-bottom" style={{...}}>
Welcome To NewSpring
</h3>
<p className="flush-bottom">
<em className="text-light-primary small">
Sign In or Create your NewSpring Account
</em>
</p>
</div>
</div>
<Toggle items={{...}} toggle={[Function]} state={1} />
<Form id="accounts" fieldsetTheme="flush soft-top" classes={{...}} submit={[Function]}>
<div>
<Input name="email" type="email" placeholder="user@email.com" label="Email" errorText="Please enter a valid email" validation={[Function]} defaultValue={[undefined]} />
</div>
<div>
<div className="push-back-double-top soft-bottom one-whole text-left">
<h6 className="flush-bottom text-dark-primary push-back-half-top">
It looks like you may have a NewSpring account already!
<span>
  Is this your email?
<br />
<br />
<a href="" onClick={[Function]} data-email="alternate@account.com">
alternate@account.com
</a>
?
</span>
<br />
<br />
Click below to sign in with this email.
</h6>
</div>
<div className="push-half-top push-bottom soft-half-bottom one-whole text-center">
<button className="btn" type="submit" onClick={[Function]} data-email="alternate@account.com">
Sign In
</button>
</div>
</div>
</Form>
</div>
`;

exports[`test renders enabled button if has email, password, and terms 1`] = `
<div>
<div className="soft-double-ends soft-sides background--primary">
<div className="text-center">
<h3 className="uppercase text-light-primary flush-bottom push-half-bottom" style={{...}}>
Welcome To NewSpring
</h3>
<p className="flush-bottom">
<em className="text-light-primary small">
Sign In or Create your NewSpring Account
</em>
</p>
</div>
</div>
<Toggle items={{...}} toggle={[Function]} state={0} />
<Form id="accounts" fieldsetTheme="flush soft-top" classes={{...}} submit={[Function]}>
<div>
<Input name="email" type="email" placeholder="user@email.com" label="Email" errorText="Please enter a valid email" validation={[Function]} defaultValue="tim@bob.com" />
</div>
<div>
<Input name="password" placeholder="password" label="Password" type="password" errorText="Password may not be empty" validation={[Function]} format={[Function]} />
<div className="push-bottom">
<h7>
<small>
<a href="/profile/forgot-password" className="text-primary" onClick={[Function]}>
Forgot Password?
</a>
</small>
</h7>
</div>
<button className="push-double-bottom btn" type="submit">
Enter
</button>
</div>
</Form>
</div>
`;

exports[`test renders people without accounts version 1`] = `
<div>
<div className="soft-double-ends soft-sides background--primary">
<div className="text-center">
<h3 className="uppercase text-light-primary flush-bottom push-half-bottom" style={{...}}>
Welcome To NewSpring
</h3>
<p className="flush-bottom">
<em className="text-light-primary small">
Sign In or Create your NewSpring Account
</em>
</p>
</div>
</div>
<Toggle items={{...}} toggle={[Function]} state={1} />
<Form id="accounts" fieldsetTheme="flush soft-top" classes={{...}} submit={[Function]}>
<div>
<Input name="email" type="email" placeholder="user@email.com" label="Email" errorText="Please enter a valid email" validation={[Function]} defaultValue={[undefined]} />
</div>
<div className="one-whole text-left push-back-double-top">
<h6 className="text-dark-primary soft-top flush-bottom soft-half-bottom push-back-double-top">
It looks like you already have a NewSpring account started! To finish setting it up, select your person and click complete account.
</h6>
<div className="text-left soft-double-left push-top relative" onClick={[Function]}>
<div className="locked-left">
<Checkbox classes={{...}} defaultValue={false} />
</div>
<div className="round background--fill display-inline-block push-half-right" style={{...}} />
<div className="flush hard display-inline-block" style={{...}}>
<h5 className="flush-bottom">
jim
 
bob
</h5>
<h7 className="flush-bottom em text-dark-tertiary">
jim@bob.com
</h7>
</div>
</div>
<div className="text-left soft-double-left push-top relative" onClick={[Function]}>
<div className="locked-left">
<Checkbox classes={{...}} defaultValue={false} />
</div>
<div className="round background--fill display-inline-block push-half-right" style={{...}} />
<div className="flush hard display-inline-block" style={{...}}>
<h5 className="flush-bottom">
steve
 
bob
</h5>
<h7 className="flush-bottom em text-dark-tertiary">
steve@bob.com
</h7>
</div>
</div>
<div className="one-whole text-center push-top">
<button className="btn push-top push-bottom" onClick={[Function]}>
Complete Account
</button>
<a className="h7 soft-double-bottom text-dark-secondary display-block" onClick={[Function]} href="">
Register new account
</a>
</div>
</div>
</Form>
</div>
`;

exports[`test renders with props 1`] = `
<div>
<div className="soft-double-ends soft-sides background--primary">
<div className="text-center">
<h3 className="uppercase text-light-primary flush-bottom push-half-bottom" style={{...}}>
Welcome To NewSpring
</h3>
<p className="flush-bottom">
<em className="text-light-primary small">
Sign In or Create your NewSpring Account
</em>
</p>
</div>
</div>
<Toggle items={{...}} toggle={[Function]} state={1} />
<Form id="accounts" fieldsetTheme="flush soft-top" classes={{...}} submit={[Function]}>
<div>
<Input name="email" type="email" placeholder="user@email.com" label="Email" errorText="Please enter a valid email" validation={[Function]} defaultValue={[undefined]} />
</div>
<div>
<Input name="password" placeholder="password" label="Password" type="password" errorText="Password may not be empty" validation={[Function]} format={[Function]} />
<div>
<Input name="firstName" label="First Name" errorText="Please enter your first name" validation={[Function]} defaultValue={[undefined]} />
<Input name="lastName" label="Last Name" errorText="Please enter your last name" validation={[Function]} defaultValue={[undefined]} />
</div>
<Checkbox name="terms" defaultValue={true} clicked={[Function]}>
By signing up you agree to our 
<a href="//newspring.cc/terms" target="_blank" rel="noopener noreferrer">
terms of use
</a>
</Checkbox>
<button className="push-double-bottom btn" type="submit">
Enter
</button>
</div>
</Form>
</div>
`;
